--- a/email-practice/index.html
+++ b/email-practice/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 <body>
 	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px;">
@@ -77,6 +78,13 @@
 		<tr style="margin-bottom: 15px;">
 			<td></td>
 			<td style=" font: 15px Verdana;color:#858383; padding: 0 0 20px 0; margin-bottom: 15px;">+3 8093 777 77 77</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px;">
+		<tr style="text-align: right;">
+			<td style="font: 35px Verdana; color: #858383; display: inline-block; width: 40px; padding: 10px 30px 0 0;"><i class="fab fa-facebook-f"></i></td>
+			<td style="font: 35px Verdana; color: #858383; display: inline-block; width: 40px; padding: 10px 25px 0 0;"><i class="fab fa-pinterest"></i></td>
+			<td style="font: 35px Verdana; color: #858383; display: inline-block; width: 40px; padding: 10px 0 0 0;"><i class="fab fa-instagram"></i></td>
 		</tr>
 	</table>
 </body>
