--- a/email-practice/index.html
+++ b/email-practice/index.html
@@ -17,7 +17,7 @@
 		
 		</tr>
 	</table>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px; margin-top: 12px; border-top: 5px solid #46b4da; border-right: 1px solid #a0a0a0; border-left: 1px solid #a0a0a0;">
+	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px; margin-top: 12px; border-top: 5px solid #46b4da; border-right: 1px solid #a0a0a0; border-left: 1px solid #a0a0a0; background-color: #d3d3d3;">
 		<tr>
 			<td style="padding: 43px 77px 0 35px; line-height: 25px; font-size: 25px; font-family: Verdana; width: 615px; display: block;">Василий  Валентинович, спасибо за ваш заказ!</td>
 		</tr>
@@ -30,7 +30,7 @@
 			<td style="padding: 45px 0 0 35px; font: 15px Verdana sans-serif; line-height: 35px;  width: 194px; display: inline-block; float: right;">дата: 01.04 2016 </td>
 		</tr>
 	</table>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 729px; margin-top: -2px; border-right: 1px solid #a0a0a0; border-left: 1px solid #a0a0a0;">
+	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 729px; margin-top: -2px; border-right: 1px solid #a0a0a0; border-left: 1px solid #a0a0a0; background-color: #d3d3d3;">
 		<tr>
 			<td style="font: 13px Verdana; color:#858383; padding: 20px 0 0 35px;">Название товара</td>
 			<td style="font: 13px Verdana; color:#858383; padding: 20px 0 0 0;">Кол-во</td>
@@ -52,7 +52,7 @@
 			<td style="padding: 20px 35px 0 0;"><hr></td>
 		</tr>
 	</table>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 729px; margin-top: -2px; border-right: 1px solid #a0a0a0;  border-left: 1px solid #a0a0a0; ">
+	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 729px; margin-top: -2px; border-right: 1px solid #a0a0a0;  border-left: 1px solid #a0a0a0; background-color: #d3d3d3;">
 		<tr>
 			<td style="font: 15px Verdana; color: #000000; padding: 20px 0 0 35px; display: inline-block; text-transform: capitalize;">оплата:</td>
 			<td style="font: 13px Verdana; color: #000000; padding: 20px 0 0 35px; text-transform: uppercase; display: inline-block;">наличная</td>
@@ -69,7 +69,7 @@
 			<td style="text-align: center;"><img src="Слой_9.png" alt=""></td>
 		</tr>
 	</table>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px; margin-top: -4px; border-top: 5px solid #46b4da; border-right: 1px solid #a0a0a0; border-left: 1px solid #a0a0a0; border-bottom: 1px solid #a0a0a0;">
+	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px; margin-top: -4px; border-top: 5px solid #46b4da; border-right: 1px solid #a0a0a0; border-left: 1px solid #a0a0a0; border-bottom: 1px solid #a0a0a0; background-color: #d3d3d3;">
 				<tr>
 			<td style=" font: 15px Verdana; padding: 20px 0 0 35px;"><a href="#" style="text-decoration: none; color:#858383;">Интернет магазин «ButterflyUA»</a></td>
 			<td style=" font: 15px Verdana;color:#858383; padding: 20px 0 0 0;">+3 8093 777 77 77</td>
