--- a/email-practice/index.html
+++ b/email-practice/index.html
@@ -22,7 +22,7 @@
 			<td style="padding: 43px 77px 0 35px; line-height: 25px; font-size: 25px; font-family: Verdana; width: 615px; display: block;">Василий  Валентинович, спасибо за ваш заказ!</td>
 		</tr>
 		<tr>
-			<td style="padding: 43px 77px 0 35px; width: 463px; line-height: 25px; font-size: 16px; display: block;">Ваша заявка принята. Мы свяжемся с вами в ближайшее время для
+			<td style="padding: 43px 77px 0 35px; width: 463px; line-height: 25px; font: 15px Verdana; display: block;">Ваша заявка принята. Мы свяжемся с вами в ближайшее время для
 подтверждения заказа №123415 </td>
 		</tr>
 		<tr>
