--- a/email-practice/index.html
+++ b/email-practice/index.html
@@ -6,86 +6,79 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 <body>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px;">
-		<tr>
+	<div style="width: 727px; margin:0 auto; box-sizing: border-box;">
+	<table border="0" cellpadding="0" cellspacing="0" style="padding:0; width: 100%;">
+		<tr style="font: 13px Verdana; font-weight:bold; text-transform: uppercase; box-sizing: border-box;">
 			<td><img src="logo-top.png" alt="" style="width: 183px; height: 93px;"></td>
-			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; font: 15px Verdana sans-serif; line-height: 30px; -webkit-text-size-adjust:none; display: block; text-transform: uppercase; text-decoration: none; margin-left: 190px; " target="_blank">shawls</a></td>
-			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; font: 15px Verdana sans-serif; line-height: 30px; -webkit-text-size-adjust:none; display: block; text-transform: uppercase; text-decoration: none; margin-left: 10px;" target="_blank">clothing</a></td>
-			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; font: 15px Verdana sans-serif; line-height: 30px; -webkit-text-size-adjust:none; display: block; text-transform: uppercase; text-decoration: none; margin-left: 10px;" target="_blank">bags</a></td>
-			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; font: 15px Verdana sans-serif; line-height: 30px; -webkit-text-size-adjust:none; display: block; text-transform: uppercase; text-decoration: none; margin-left: 10px;" target="_blank">accessories</a></td>
-			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; font: 15px Verdana sans-serif; line-height: 30px; -webkit-text-size-adjust:none; display: block; text-transform: uppercase; text-decoration: none; margin-left: 10px;" target="_blank">sale</a></td>
-		
+			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; line-height: 45px; -webkit-text-size-adjust:none; display: block; text-decoration: none; margin-left: 190px; " target="_blank">shawls</a></td>
+			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; line-height: 45px; -webkit-text-size-adjust:none; display: block; text-decoration: none; margin-left: 10px;" target="_blank">clothing</a></td>
+			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; line-height: 45px; -webkit-text-size-adjust:none; display: block; text-decoration: none; margin-left: 10px;" target="_blank">bags</a></td>
+			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; line-height: 45px; -webkit-text-size-adjust:none; display: block; text-decoration: none; margin-left: 10px;" target="_blank">accessories</a></td>
+			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; line-height: 45px; -webkit-text-size-adjust:none; display: block;  text-decoration: none; margin-left: 10px;" target="_blank">sale</a></td>
 		</tr>
 	</table>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px; margin-top: 12px; border-top: 5px solid #46b4da; border-right: 1px solid #a0a0a0; border-left: 1px solid #a0a0a0; background-color: #d3d3d3;">
-		<tr>
-			<td style="padding: 43px 77px 0 35px; line-height: 25px; font-size: 25px; font-family: Verdana; width: 615px; display: block;">Василий  Валентинович, спасибо за ваш заказ!</td>
+	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px; margin-top: 12px; border-top: 5px solid #46b4da; border-right: 1px solid #a0a0a0; border-left: 1px solid #a0a0a0; border-bottom: 1px solid #a0a0a0; background-color: #f5f5f5;">
+		<tr style="display: block; width: 100%;">
+			<td style="padding: 43px 77px 0 35px; line-height: 25px; font: 25px Verdana; width: 615px; display: block;">Василий  Валентинович, спасибо за ваш заказ!</td>
 		</tr>
-		<tr>
-			<td style="padding: 43px 77px 0 35px; width: 463px; line-height: 25px; font: 15px Verdana; display: block;">Ваша заявка принята. Мы свяжемся с вами в ближайшее время для
+		<tr style="width: 100%;">
+			<td style="padding: 23px 77px 0 35px; width: 463px; line-height: 25px; font: 15px Verdana; display: block;">Ваша заявка принята. Мы свяжемся с вами в ближайшее время для
 подтверждения заказа №123415 </td>
 		</tr>
-		<tr>
-			<td style="padding: 43px 0 0 35px; font: 30px Verdana sans-serif; line-height: 35px;  width: 194px; display: inline-block;">Заказ №123415</td>
-			<td style="padding: 45px 0 0 35px; font: 15px Verdana sans-serif; line-height: 35px;  width: 194px; display: inline-block; float: right;">дата: 01.04 2016 </td>
+		<tr style=" width: 100%;">
+			<td style="padding: 43px 0 0 35px; font: 26px Verdana; line-height: 35px;  width: 230px; display: inline-block;">Заказ №123415</td>
+			<td style="padding: 45px 35px 0 0; font: 15px Verdana; line-height: 35px;  float: right;">дата: 01.04 2016 </td>
 		</tr>
-	</table>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 729px; margin-top: -2px; border-right: 1px solid #a0a0a0; border-left: 1px solid #a0a0a0; background-color: #d3d3d3;">
-		<tr>
-			<td style="font: 13px Verdana; color:#858383; padding: 20px 0 0 35px;">Название товара</td>
-			<td style="font: 13px Verdana; color:#858383; padding: 20px 0 0 0;">Кол-во</td>
-			<td style="font: 13px Verdana; color:#858383; padding: 20px 0 0 0; ">Сумма</td>
+		<tr style="display: block; width: 100%; font: 13px Verdana; color:#858383">
+			<td style="padding: 20px 0 0 35px; display: inline-block; width: 380px;">Название товара</td>
+			<td style="padding: 20px 0 0 0; display: inline-block;">Кол-во</td>
+			<td style="padding: 20px 35px 0 0;float: right;">Сумма</td>
 		</tr>
-		<tr>
-			<td style="padding: 20px 0 0 35px;"><hr></td>
-			<td style="padding: 20px 0 0 0;"><hr></td>
-			<td style="padding: 20px 35px 0 0; "><hr></td>
+		<tr style="width: 100%;">
+			<td style="padding: 20px 35px 0 35px;"><hr color="#d3d3d3"></td>
 		</tr>
 		<tr>
-			<td style=" font: 15px Verdana;color:#858383; padding: 20px 0 0 35px;"><a href="#" style="text-decoration: none; color: #46b4da">Beige Ukrainian scarf</a></td>
-			<td style=" font: 15px Verdana;color:#000000; padding: 20px 0 0 0; font-weight: bold;">1</td>
-			<td style="font: 15px Verdana; color:#000000; padding: 20px 0 0 0; font-weight: bold;">300$</td>
+			<td style=" font: 17px Verdana;color:#858383; padding: 20px 0 0 35px; display: inline-block; width: 400px;"><a href="#" style="text-decoration: none; color: #46b4da;">Beige Ukrainian scarf</a></td>
+			<td style=" font: 15px Verdana;color:#000000; padding: 20px 0 0 0; display: inline-block;">1</td>
+			<td style="font: 17px Verdana; color:#000000; padding: 20px 35px 0 0; font-weight: bold; float: right;">300$</td>
 		</tr>
 		<tr>
-			<td style="padding: 20px 0 0 35px;"><hr></td>
-			<td style="padding: 20px 0 0 0;"><hr></td>
-			<td style="padding: 20px 35px 0 0;"><hr></td>
+			<td style="padding: 20px 35px 0 35px;"><hr color="#d3d3d3"></td>
 		</tr>
-	</table>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 729px; margin-top: -2px; border-right: 1px solid #a0a0a0;  border-left: 1px solid #a0a0a0; background-color: #d3d3d3;">
-		<tr>
-			<td style="font: 15px Verdana; color: #000000; padding: 20px 0 0 35px; display: inline-block; text-transform: capitalize;">оплата:</td>
-			<td style="font: 13px Verdana; color: #000000; padding: 20px 0 0 35px; text-transform: uppercase; display: inline-block;">наличная</td>
+		<tr style="font: 15px Verdana; color: #000000;">
+			<td style=" padding: 20px 0 0 35px; display: inline-block; width: 90px; text-transform: capitalize;">оплата:</td>
+			<td style=" padding: 20px 0 0 35px; text-transform: uppercase; display: inline-block;">наличная</td>
 		</tr>
-		<tr>
-			<td style="font: 15px Verdana; color: #000000; padding: 20px 0 0 35px; display: inline-block; text-transform: capitalize;">покупатель:</td>
-			<td style="font: 15px Verdana; color: #000000; padding: 20px 0 0 35px; text-transform: capitalize; display: inline-block;">василий валентинович, <a href="tel:0 937 777 777" value="+380937777777" target="_blank" style="color: #46b4da">+3 8093 777 77 77</a></td>
+		<tr style="font: 15px Verdana; color: #000000;">
+			<td style=" padding: 20px 0 0 35px; display: inline-block; width: 90px; text-transform: capitalize;">покупатель:</td>
+			<td style=" padding: 20px 0 0 35px; text-transform: capitalize; display: inline-block;">василий валентинович, <a href="tel:0 937 777 777" value="+380937777777" target="_blank" style="color: #46b4da">+3 8093 777 77 77</a></td>
 		</tr>
-		<tr>
-			<td style="font: 15px Verdana; color: #000000; padding: 20px 0 0 35px; display: inline-block; text-transform: capitalize;">продавец:</td>
+		<tr style="font: 15px Verdana; color: #000000;">
+			<td style=" padding: 20px 0 0 35px; display: inline-block; width: 90px; text-transform: capitalize;">продавец:</td>
 			<td style="padding: 20px 0 0 35px; text-transform: uppercase; display: inline-block;"><img src="logo-top.png" alt="" width="73px" height="37px"></td>
 		</tr>
 		<tr>
 			<td style="text-align: center;"><img src="Слой_9.png" alt=""></td>
 		</tr>
-	</table>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 729px; margin-top: -4px; border-top: 5px solid #46b4da; border-right: 1px solid #a0a0a0; border-left: 1px solid #a0a0a0; border-bottom: 1px solid #a0a0a0; background-color: #d3d3d3;">
-				<tr>
-			<td style=" font: 15px Verdana; padding: 20px 0 0 35px;"><a href="#" style="text-decoration: none; color:#858383;">Интернет магазин «ButterflyUA»</a></td>
-			<td style=" font: 15px Verdana;color:#858383; padding: 20px 0 0 0;">+3 8093 777 77 77</td>
-			<td style="font: 15px Verdana; color:#858383; padding: 20px 0 0 0;"><a href="#" href="#" style="text-decoration: none; color:#858383;">подписаться на новости</a></td>
+		<tr style="width: 100%;">
+			<td style="width: 100%; display: block; height: 5px; background-color: #46b4da; margin-top: -4px;"></td>
 		</tr>
-		<tr style="margin-bottom: 15px;">
-			<td></td>
-			<td style=" font: 15px Verdana;color:#858383; padding: 0 0 20px 0; margin-bottom: 15px;">+3 8093 777 77 77</td>
+				<tr style="font: 15px Verdana; color:#858383;">
+			<td style="padding: 20px 0 0 35px; display: inline-block; width: 280px;"><a href="#" style="text-decoration: none;  color:#858383;">Интернет магазин «ButterflyUA»</a></td>
+			<td style="font-weight: bold; display: inline-block; padding: 20px 0 0 0;">+3 8093 777 77 77</td>
+			<td style="display: inline-block; float:right; padding: 20px 35px 0 0;"><a href="#" href="#" style="color:#858383;">подписаться на новости</a></td>
+		</tr>
+		<tr style="margin-bottom: 15px; text-align: center; font: 15px Verdana; color:#858383; width: 100%;">
+			<td style="font-weight: bold; padding: 5px 0 20px 0; margin-bottom: 15px; display: inline-block; margin-left: 65px;">+3 8093 777 77 77</td>
 		</tr>
 	</table>
 	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px;">
-		<tr style="text-align: right;">
-			<td style="font: 35px Verdana; color: #858383; display: inline-block; width: 40px; padding: 10px 30px 0 0;"><i class="fab fa-facebook-f"></i></td>
-			<td style="font: 35px Verdana; color: #858383; display: inline-block; width: 40px; padding: 10px 25px 0 0;"><i class="fab fa-pinterest"></i></td>
-			<td style="font: 35px Verdana; color: #858383; display: inline-block; width: 40px; padding: 10px 0 0 0;"><i class="fab fa-instagram"></i></td>
+		<tr style="text-align: right; font: 30px Verdana; color: #858383;" align="right">
+			<td style=" display: inline-block; width: 40px; padding: 20px 30px 0 0;"><a href="#" style="color: #858383;"><i class="fab fa-facebook-f"></i></a></td>
+			<td style=" display: inline-block; width: 40px; padding: 20px 25px 0 0;"><a href="#" style="color: #858383;"><i class="fab fa-pinterest"></i></a></td>
+			<td style=" display: inline-block; width: 40px; padding: 20px 0 0 0;"><a href="#" style="color: #858383;"><i class="fab fa-instagram"></i></a></td>
 		</tr>
 	</table>
+	</div>
 </body>
 </html>
