--- a/email-practice/index.html
+++ b/email-practice/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<div style="width: 727px; margin:0 auto; box-sizing: border-box;">
-	<table border="0" cellpadding="0" cellspacing="0" style="padding:0; width: 100%;">
-		<tr style="font: 13px Verdana; font-weight:bold; text-transform: uppercase; box-sizing: border-box;">
+	<table border="0" cellpadding="0" cellspacing="0" style="padding:0; width: 100%; ">
+		<tr style="font: 13px Verdana; font-weight:bold; text-transform: uppercase; box-sizing: border-box; display: block; width: 100%;">
 			<td><img src="logo-top.png" alt="" style="width: 183px; height: 93px;"></td>
 			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; line-height: 45px; -webkit-text-size-adjust:none; display: block; text-decoration: none; margin-left: 190px; " target="_blank">shawls</a></td>
 			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; line-height: 45px; -webkit-text-size-adjust:none; display: block; text-decoration: none; margin-left: 10px;" target="_blank">clothing</a></td>
@@ -16,63 +16,62 @@
 			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; line-height: 45px; -webkit-text-size-adjust:none; display: block; text-decoration: none; margin-left: 10px;" target="_blank">accessories</a></td>
 			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; line-height: 45px; -webkit-text-size-adjust:none; display: block;  text-decoration: none; margin-left: 10px;" target="_blank">sale</a></td>
 		</tr>
-	</table>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px; margin-top: 12px; border-top: 5px solid #46b4da; border-right: 1px solid #a0a0a0; border-left: 1px solid #a0a0a0; border-bottom: 1px solid #a0a0a0; background-color: #f5f5f5;">
-		<tr style="display: block; width: 100%;">
-			<td style="padding: 43px 77px 0 35px; line-height: 25px; font: 25px Verdana; width: 615px; display: block;">Василий  Валентинович, спасибо за ваш заказ!</td>
-		</tr>
 		<tr style="width: 100%;">
+			<td style="width: 100% - 2px; display: block; height: 5px; background-color: #46b4da;"></td>
+		</tr>
+		<tr style="display: block; width: 99.7%; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
+			<td style="padding: 43px 0 0 35px; line-height: 25px; font: 25px Verdana;">Василий  Валентинович, спасибо за ваш заказ!</td>
+		</tr>
+		<tr style="display:block; width:99.7%; background-color: #f5f5f5;  border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
 			<td style="padding: 23px 77px 0 35px; width: 463px; line-height: 25px; font: 15px Verdana; display: block;">Ваша заявка принята. Мы свяжемся с вами в ближайшее время для
 подтверждения заказа №123415 </td>
 		</tr>
-		<tr style=" width: 100%;">
+		<tr style="display: block; width: 99.7%; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
 			<td style="padding: 43px 0 0 35px; font: 26px Verdana; line-height: 35px;  width: 230px; display: inline-block;">Заказ №123415</td>
 			<td style="padding: 45px 35px 0 0; font: 15px Verdana; line-height: 35px;  float: right;">дата: 01.04 2016 </td>
 		</tr>
-		<tr style="display: block; width: 100%; font: 13px Verdana; color:#858383">
+		<tr style="display: block; width: 99.7%; font: 13px Verdana; color:#858383; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
 			<td style="padding: 20px 0 0 35px; display: inline-block; width: 380px;">Название товара</td>
 			<td style="padding: 20px 0 0 0; display: inline-block;">Кол-во</td>
 			<td style="padding: 20px 35px 0 0;float: right;">Сумма</td>
 		</tr>
-		<tr style="width: 100%;">
-			<td style="padding: 20px 35px 0 35px;"><hr color="#d3d3d3"></td>
+		<tr style="display: block;width: 99.7%; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
+			<td style="padding: 20px 35px 0 35px; width: 727px;"><hr style="display: inline-block; width: 100%;" color="#d3d3d3"></td>
 		</tr>
-		<tr>
+		<tr style="display: block; width: 99.7%; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
 			<td style=" font: 17px Verdana;color:#858383; padding: 20px 0 0 35px; display: inline-block; width: 400px;"><a href="#" style="text-decoration: none; color: #46b4da;">Beige Ukrainian scarf</a></td>
 			<td style=" font: 15px Verdana;color:#000000; padding: 20px 0 0 0; display: inline-block;">1</td>
 			<td style="font: 17px Verdana; color:#000000; padding: 20px 35px 0 0; font-weight: bold; float: right;">300$</td>
 		</tr>
-		<tr>
-			<td style="padding: 20px 35px 0 35px;"><hr color="#d3d3d3"></td>
+		<tr style="display: block;width: 99.7%; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
+			<td style="padding: 20px 35px 0 35px; width: 727px;"><hr style="display: inline-block; width: 100%;" color="#d3d3d3"></td>
 		</tr>
-		<tr style="font: 15px Verdana; color: #000000;">
+		<tr style="display: block; width: 99.7%; font: 15px Verdana; color: #000000; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
 			<td style=" padding: 20px 0 0 35px; display: inline-block; width: 90px; text-transform: capitalize;">оплата:</td>
 			<td style=" padding: 20px 0 0 35px; text-transform: uppercase; display: inline-block;">наличная</td>
 		</tr>
-		<tr style="font: 15px Verdana; color: #000000;">
+		<tr style="display: block; width: 99.7%; font: 15px Verdana; color: #000000; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
 			<td style=" padding: 20px 0 0 35px; display: inline-block; width: 90px; text-transform: capitalize;">покупатель:</td>
 			<td style=" padding: 20px 0 0 35px; text-transform: capitalize; display: inline-block;">василий валентинович, <a href="tel:0 937 777 777" value="+380937777777" target="_blank" style="color: #46b4da">+3 8093 777 77 77</a></td>
 		</tr>
-		<tr style="font: 15px Verdana; color: #000000;">
+		<tr style="display: block; width: 99.7%; font: 15px Verdana; color: #000000; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
 			<td style=" padding: 20px 0 0 35px; display: inline-block; width: 90px; text-transform: capitalize;">продавец:</td>
 			<td style="padding: 20px 0 0 35px; text-transform: uppercase; display: inline-block;"><img src="logo-top.png" alt="" width="73px" height="37px"></td>
 		</tr>
-		<tr>
-			<td style="text-align: center;"><img src="Слой_9.png" alt=""></td>
+		<tr style="display: block; width: 99.7%; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
+			<td style="display: block; text-align: center;"><img src="Слой_9.png" alt=""></td>
 		</tr>
 		<tr style="width: 100%;">
 			<td style="width: 100%; display: block; height: 5px; background-color: #46b4da; margin-top: -4px;"></td>
 		</tr>
-				<tr style="font: 15px Verdana; color:#858383;">
-			<td style="padding: 20px 0 0 35px; display: inline-block; width: 280px;"><a href="#" style="text-decoration: none;  color:#858383;">Интернет магазин «ButterflyUA»</a></td>
+				<tr style="display: block; width: 99.7%; font: 15px Verdana; color:#858383; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
+			<td style="padding: 20px 0 0 35px; display: inline-block; width: 266px;"><a href="#" style="text-decoration: none;  color:#858383;">Интернет магазин «ButterflyUA»</a></td>
 			<td style="font-weight: bold; display: inline-block; padding: 20px 0 0 0;">+3 8093 777 77 77</td>
 			<td style="display: inline-block; float:right; padding: 20px 35px 0 0;"><a href="#" href="#" style="color:#858383;">подписаться на новости</a></td>
 		</tr>
-		<tr style="margin-bottom: 15px; text-align: center; font: 15px Verdana; color:#858383; width: 100%;">
-			<td style="font-weight: bold; padding: 5px 0 20px 0; margin-bottom: 15px; display: inline-block; margin-left: 65px;">+3 8093 777 77 77</td>
+		<tr style="display: block; width: 99.7%; margin-bottom: 15px; text-align: center; font: 15px Verdana; color:#858383; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3; border-bottom: 1px solid #d3d3d3;">
+			<td style="font-weight: bold; padding: 5px 0 20px 0; margin-bottom: 15px; display: inline-block; margin-left: 40px;">+3 8093 777 77 77</td>
 		</tr>
-	</table>
-	<table border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; padding:0; width: 727px;">
 		<tr style="text-align: right; font: 30px Verdana; color: #858383;" align="right">
 			<td style=" display: inline-block; width: 40px; padding: 20px 30px 0 0;"><a href="#" style="color: #858383;"><i class="fab fa-facebook-f"></i></a></td>
 			<td style=" display: inline-block; width: 40px; padding: 20px 25px 0 0;"><a href="#" style="color: #858383;"><i class="fab fa-pinterest"></i></a></td>
