--- a/email-practice/index.html
+++ b/email-practice/index.html
@@ -17,7 +17,7 @@
 			<td style="vertical-align: bottom;"><a href="#" style="color: #46b4da; line-height: 45px; -webkit-text-size-adjust:none; display: block;  text-decoration: none; margin-left: 10px;" target="_blank">sale</a></td>
 		</tr>
 		<tr style="width: 100%;">
-			<td style="width: 100% - 2px; display: block; height: 5px; background-color: #46b4da;"></td>
+			<td style="width: 99.9%; display: block; height: 5px; background-color: #46b4da;"></td>
 		</tr>
 		<tr style="display: block; width: 99.7%; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
 			<td style="padding: 43px 0 0 35px; line-height: 25px; font: 25px Verdana;">Василий  Валентинович, спасибо за ваш заказ!</td>
@@ -26,7 +26,7 @@
 			<td style="padding: 23px 77px 0 35px; width: 463px; line-height: 25px; font: 15px Verdana; display: block;">Ваша заявка принята. Мы свяжемся с вами в ближайшее время для
 подтверждения заказа №123415 </td>
 		</tr>
-		<tr style="display: block; width: 99.7%; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
+		<tr style="display: inline-block; width: 99.7%; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
 			<td style="padding: 43px 0 0 35px; font: 26px Verdana; line-height: 35px;  width: 230px; display: inline-block;">Заказ №123415</td>
 			<td style="padding: 45px 35px 0 0; font: 15px Verdana; line-height: 35px;  float: right;">дата: 01.04 2016 </td>
 		</tr>
@@ -62,7 +62,7 @@
 			<td style="display: block; text-align: center;"><img src="Слой_9.png" alt=""></td>
 		</tr>
 		<tr style="width: 100%;">
-			<td style="width: 100%; display: block; height: 5px; background-color: #46b4da; margin-top: -4px;"></td>
+			<td style="width: 99.9%; display: block; height: 5px; background-color: #46b4da; margin-top: -4px;"></td>
 		</tr>
 				<tr style="display: block; width: 99.7%; font: 15px Verdana; color:#858383; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3;">
 			<td style="padding: 20px 0 0 35px; display: inline-block; width: 266px;"><a href="#" style="text-decoration: none;  color:#858383;">Интернет магазин «ButterflyUA»</a></td>
@@ -70,7 +70,7 @@
 			<td style="display: inline-block; float:right; padding: 20px 35px 0 0;"><a href="#" href="#" style="color:#858383;">подписаться на новости</a></td>
 		</tr>
 		<tr style="display: block; width: 99.7%; margin-bottom: 15px; text-align: center; font: 15px Verdana; color:#858383; background-color: #f5f5f5; border-right: 1px solid #d3d3d3; border-left: 1px solid #d3d3d3; border-bottom: 1px solid #d3d3d3;">
-			<td style="font-weight: bold; padding: 5px 0 20px 0; margin-bottom: 15px; display: inline-block; margin-left: 40px;">+3 8093 777 77 77</td>
+			<td style="font-weight: bold; padding: 5px 0 20px 0; margin-bottom: 15px; display: inline-block; margin-left: 42px;">+3 8093 777 77 77</td>
 		</tr>
 		<tr style="text-align: right; font: 30px Verdana; color: #858383;" align="right">
 			<td style=" display: inline-block; width: 40px; padding: 20px 30px 0 0;"><a href="#" style="color: #858383;"><i class="fab fa-facebook-f"></i></a></td>
