--- a/selectors-practice-02/index1.html
+++ b/selectors-practice-02/index1.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-	<title>Siblings</title>
-	<style>
-		:root {
+	<title>Selectors :not and by attributes</title>
+</head>
+<style>
+	:root {
   --color_1: #231A31;
   --color_2: #E42F45;
   --color_3: #8AB2FF;
@@ -12,44 +13,53 @@
   --color_7: #085F63;
   --color_8: #887575;
 }
-
-body div:first-child p:nth-child(n + 2) {
-  background-color: var(--color_1);
-}
- p + h2 {
- 	background-color: var(--color_2);
- }
- span ~ h2 {
- 	background-color: var(--color_3);
- }
- div ~ h2 {
- 	background-color: var(--color_4);
- }
-	</style>
-</head>
+	a[href*="about"] {
+		background-color: var(--color_6);
+	}
+	a[href$=".html"] {
+		background-color: var(--color_7);
+	}
+	p:not([class]) {
+		background-color: var(--color_3);
+	}
+	*[data-href] {
+		background-color: var(--color_4);
+	}
+	* a:first-child {
+		background-color: var(--color_5);
+	}
+	*[data-href~="highlight_me"] {
+		text-decoration: underline;
+	}
+</style>
 <body>
 	<div>
+	    	<a href="about">Ссылка 1.1</a>
 		<p>Параграф 1</p>
 		<p>Параграф 2</p>
-		<p>Параграф 3</p>
-    <p class="active">Параграф 4</p>
+		<p data-href="about">Параграф 3</p>
+		<p class="active">Параграф 4</p>
 		<h2>Заголовок 1</h2>
 	</div>
 	<div>
-		<p>Параграф 1.2</p>
+		<p class="about__section">Параграф 1.2</p>
 		<p>Параграф 2.2</p>
 		<p class="active">Параграф 3.2</p>
-		<p>Параграф 4.2</p>
-		<h2>Заголовок 1.2</h2>
+		<p data-href="about some tell">Параграф 4.2</p>
+    		<a href="http://somesite.com/about.html">Ссылка 1.2</a>
+		<h2 data-href="hell highlight_me">Заголовок 1.2</h2>
 	</div>
 	<div>
 		<p>Параграф 1.3</p>
 		<p>Параграф 2.3</p>
 		<span>Спан</span>
-    <p>Параграф 3.3</p>
-		<p>Параграф 4.3</p>
+		<p class="about__team">Параграф 3.3</p>
+		<p class="link" data-href="about team follow some huge highlight_me">Параграф 4.3</p>
 		<h2>Заголовок 1.3</h2>
+    		<a data-href="almost_linkhighlight_me" href="http://somesite.com/about.html">Ссылка 1.3</a>
 	</div>
-	<h2>Заголовок 2</h2>	
+	<h2>Заголовок 2</h2>
+  	<a href="http://somesite.com/team.html">Ссылка 2</a>
 </body>
 </html>
+
