--- a/selectors-practice-02/index3.html
+++ b/selectors-practice-02/index3.html
@@ -25,7 +25,7 @@ a:hover {
 color: #00FF00;
 }
 
-a[class*="www"], a:visited {
+a.www, a:visited {
 	background-color: var(--color_6);
 }
 a:not([class*="www"]) {
