--- a/Our insights/lending-practice/index.html
+++ b/Our insights/lending-practice/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
 	<header>
+		<div class="header-wrapper">
 			<div class="header-block">
-				<img src="img/Слой_4.png" alt="">
-				<a href="#">One more site</a>
+				<img src="img/logo_head.png" alt="Logo">
+				<p>One more site</p>
 			</div>
 			<div class="header-block">
 				<ul class="hover-list">
@@ -24,24 +25,27 @@
 					
 					<li><a href="#">contacts</a></li>
 				</ul>
+		</div>
 			</div>
 	</header>
 	<main>
 		<h1>our insights</h1>
-		<div class="details-block">
-			<img src="img/Слой_3.png" alt="">
-			<p>Lorem ipsum dolor sit amet.</p>
-			<button>details</button>
-		</div>
-		<div class="details-block">
-			<img src="img/Слой_2.png" alt="">
-			<p>Lorem ipsum dolor sit amet.</p>
-			<button>details</button>
-		</div>
-		<div class="details-block">
-			<img src="img/Слой_1.png" alt="">
-			<p>Lorem ipsum dolor sit amet.</p>
-			<button>details</button>
+		<div class="block-wrapper">
+			<div class="details-block">
+				<img src="img/logo_a.png" alt="A">
+				<p>Lorem ipsum dolor sit amet.</p>
+				<button>details</button>
+			</div>
+			<div class="details-block">
+				<img src="img/bell.png" alt="Bell">
+				<p>Lorem ipsum dolor sit amet.</p>
+				<button>details</button>
+			</div>
+			<div class="details-block">
+				<img src="img/head.png" alt="Head">
+				<p>Lorem ipsum dolor sit amet.</p>
+				<button>details</button>
+			</div>
 		</div>
 	</main>
 	<article>
@@ -70,11 +74,13 @@
 		</div>
 	</article>
 		<div class="arrow">
-			<a href="#"><img src="img/Слой_5.png" alt=""></a>
+			<a href="#"><img src="img/arrow.png" alt=""></a>
 		</div>
 	<footer>
-		<div class="footer-block">2018 mate academy</div>
-		<div class="footer-block">Created by one more awesome developer</div>
+		<div class="footer-wrapper">
+			<div class="footer-block">2018 mate academy</div>
+			<div class="footer-block">Created by one more awesome developer</div>
+		</div>
 	</footer>
 </body>
 </html>
