--- a/Elena-psd/index.html
+++ b/Elena-psd/index.html
@@ -14,10 +14,12 @@
 	<header>
 		<div class="header-wrap">
 			<h1>elena</h1>
-			<a href="#">home</a>
-			<a href="#">services</a>
-			<a href="#">features</a>
-			<a href="#">contact</a>
+			<ul>
+				<li><a href="#">home</a></li>
+				<li><a href="#">services</a></li>
+				<li><a href="#">features</a></li>
+				<li><a href="#">contact</a></li>
+			</ul>
 			<h2>have a good day</h2>
 			<p class="line left-line"></p>
 			<p>just for you themeforest</p>
@@ -51,14 +53,14 @@
 		<div class="target target-second">
 			<div class="target-wrap">
 				<div class="target-block">
-					<img src="img/Layer_14.png" alt="car">
+					<img src="img/car.png" alt="car">
 					<h3>responsive email template</h3>
 					<div class="line"></div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, consequuntur, exercitationem!</p>
 					<button><a href="#">Read more</a></button>
 				</div>
 				<div class="target-block">
-					<img src="img/Layer_16.png" alt="pair">
+					<img src="img/beach.png" alt="pair">
 					<h3>fully compatible template</h3>
 					<div class="line"></div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, consequuntur, exercitationem!</p>
@@ -78,25 +80,25 @@
 			<div class="target">
 		<div class="target-wrap">
 			<div class="target-block">
-				<img src="img/Layer_17.png" alt="lights">
+				<img src="img/light.png" alt="lights">
 				<h3>fully layered psd</h3>
 				<div class="line"></div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-				<a href="#">Check this out > </a>
+				<a href="#" class="check">Check this out > </a>
 			</div>
 			<div class="target-block">
-				<img src="img/Layer_20.png" alt="woman">
+				<img src="img/woman.png" alt="woman">
 				<h3>full compability</h3>
 				<div class="line"></div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-				<a href="#">Check this out > </a>
+				<a href="#" class="check">Check this out > </a>
 			</div>
 			<div class="target-block">
-				<img src="img/Layer_18.png" alt="converse">
+				<img src="img/boots.png" alt="converse">
 				<h3>very great modules</h3>
 				<div class="line"></div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-				<a href="#">Check this out > </a>
+				<a href="#" class="check">Check this out > </a>
 			</div>
 		</div>
 	</div>
@@ -114,20 +116,20 @@
 					<h3>very nice to see</h3>
 					<div class="line"></div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, consequuntur, exercitationem!</p>
-					<button><a href="#">Read more</a></button>
+					<button><a href="#" >Read more</a></button>
 				</div>
 			</div>
 		</div>
 				<div class="red-carpet">
 			<div class="red-carpet-wrap">
 				<div>
-					<img src="img/Layer_19.png" alt="red carpet">
+					<img src="img/carpet.png" alt="red carpet">
 				</div>
 				<div>
 					<h3>just for you on themeforest</h3>
 					<div class="line"></div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec interdum mollis risus, in mattis erat convallis egestas.</p>
-					<button><a href="#">Read more</a></button>
+					<button><a href="#" class="check">Read more</a></button>
 				</div>
 				
 			</div>
@@ -152,6 +154,7 @@
 			<div class="links">
 				<i class="fab fa-google-plus"></i>
 				<i class="fab fa-facebook-f"></i>
+				<i class="fab fa-twitter"></i>
 			</div>
 		</div>
 	</footer>
