--- a/masonry-practice/index.html
+++ b/masonry-practice/index.html
@@ -27,6 +27,7 @@
 		<div class="masonry-block second"><img src="img/1441188207.jpg" alt="2"></div>
 		<div class="masonry-block third"><img src="img/1449580642.jpg" alt="3"></div>
 		<div class="masonry-block fourth"><img src="img/1449574206.jpg" alt="4"></div>
+				<div class="masonry-block first"><img src="img/1440975606.jpg" alt="1"></div>
 	</div>
 </body>
 </html>
