--- a/svg-practice/buttons/index.html
+++ b/svg-practice/buttons/index.html
@@ -6,30 +6,21 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div id="workarea">
-  <div class="position">
-
-    <!--start button, nothing above this is necessary -->
+  <div class="container">
     <div class="svg-wrapper">
-      <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
-        <rect id="shape" height="40" width="150" />
-        <div id="text">
-          <a href=""><span class="spot"></span>Button 1</a>
-        </div>
+      <svg height="100" width="300" xmlns="http://www.w3.org/2000/svg">
+        <rect id="shape" height="100" width="300" fill="white" stroke="black"/>
+        <rect class="inner"style="fill: black; stroke-width:0;" />
+        <text x="110" y="55">Button 1</text>
       </svg>
     </div>
-    <!--Next button -->
     <div class="svg-wrapper">
-      <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
-        <rect id="shape" height="40" width="150" />
-        <div id="text">
-          <a href=""><span class="spot"></span>Button 2</a>
-        </div>
+      <svg height="100" width="300" xmlns="http://www.w3.org/2000/svg">
+        <rect id="shape" height="100" width="300" fill="white" stroke="black"/>
+        <rect class="inner"style="fill: black; stroke-width:0;" />
+        <text x="110" y="55">Button 2</text>
       </svg>
     </div>
-
   </div>
-
-</div>
 </body>
 </html>
