--- a/todo-list/src/core/index.html
+++ b/todo-list/src/core/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	123
+	{% include "src/taskList/tmp/index.html" %}
 </body>
 </html>
