updating svg practice

--- a/svg-practice/adding svg to document/index.html
+++ b/svg-practice/adding svg to document/index.html
@@ -17,7 +17,7 @@
 		<line x1="300" y1="0" x2="0" y2="300" stroke-width="1" stroke="red"/>
 	</svg>
 	<svg>
-		<ellipse cx="400" cy="200" rx="400" ry="200" fill="rgb(234,234,234)"/>
+		<ellipse cx="400" cy="200" rx="400" ry="200" fill="transparent", stroke-width="4" stroke="yellow"   stroke-dasharray="4"/>
 
 	</svg>
 </body>
