--- a/login-page/src/core/index.html
+++ b/login-page/src/core/index.html
@@ -11,6 +11,7 @@
 	<div class="wrapper">
 		<div class="wrapper-container">
 		<div class="container login">
+			<form action="">
 			{% include "src/tmp/login.html" %}
 		</div>
 		<div class="container registration">
